MJCompiler/test/myTests/lexicalErrors.mj
//Test 302
// all errors
program recovery

int $#@# something;

{
	void main()
	{
	    @#$
	    @$@
    }
}

